# infinite-context

./: .gitignore  Cargo.toml  Dockerfile  INSTALL.md  README.md  docker-compose.yml  install.sh  pyproject.toml  realistic_demo_20260112_144744.json  wow_demo_results_20260112_144007.json  wow_demo_v2_20260112_144122.json
.github/workflows/: ci.yml  docker.yml  pypi.yml
docs/: DEMO_LOGS.md  IMAGE_PROMPTS.md
docs/image_prompts/: fig01_hero.md  fig02_tree.md  fig03_beam_search.md  fig04_complexity.md  fig05_accuracy.md  fig06_centroid.md  fig07_extension.md  fig08_components.md  fig09_sequence.md  fig10_fileformat.md  fig11_benchmark.md  fig12_privacy.md  fig13_compatibility.md
examples/: benchmark_demo.py  demo_chat_with_logs.py  quickstart.py  realistic_demo.py  wow_demo.py  wow_demo_v2.py
huggingface-space/: README.md  app.py  requirements.txt
python/infinite_context/: __init__.py  context.py
scripts/: docker-build-push.sh
src/: lib.rs  main.rs
src/adapters/: mod.rs  ollama.rs  python.rs
src/adapters/index/: consolidation.rs  flat.rs  hat.rs  learnable_routing.rs  mod.rs  persistence.rs  subspace.rs
src/core/: blob.rs  config.rs  id.rs  merge.rs  mod.rs  point.rs  proximity.rs
src/ports/: latency.rs  mod.rs  near.rs  place.rs
tests/: __init__.py  test_core.py
